--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
     "browser-sync": "^2.26.7",
-    "del": "3.0.0",
+    "del": "^3.0.0",
     "gulp-cssnano": "2.1.2",
     "gulp-imagemin": "4.0.0",
     "gulp-modernizr": "1.0.0-alpha",
     "gulp-postcss": "7.0.0",
-    "gulp-rename": "1.2.2",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-rev": "8.1.0",
     "gulp-svg-sprite": "^1.5.0",
