--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "travel-site",
   "version": "1.0.0",
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
+  },
   "dependencies": {
     "gulp": "^4.0.2",
     "jquery": "^3.4.1",
@@ -12,9 +15,9 @@
   },
   "devDependencies": {
     "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-preset-es2015": "6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
     "del": "^3.0.0",
     "gulp-cssnano": "2.1.2",
@@ -29,11 +32,12 @@
     "gulp-uglify": "3.0.0",
     "gulp-usemin": "0.3.28",
     "gulp-watch": "4.3.11",
-    "postcss-hexrgba": "1.0.0",
+    "postcss-hexrgba": "^1.0.0",
     "postcss-import": "11.0.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "2.1.2",
     "postcss-simple-vars": "4.1.0",
-    "webpack": "3.8.1"
+    "webpack": "^3.12.0",
+    "webpack-cli": "^3.3.10"
   }
 }
